--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/index.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 ${param gazap.site.web.extensions.ViewMetaExtension eViewMeta transient}
 ${param gazap.site.web.extensions.CdnExtension eCdn transient}
-${servlet.setContentType("text/html")}
+${response:setContentType("text/html")}
 <html>
 ${include("shared/html-head.html")}
 <body>
 <div id="leftPane">
-    ${include("shared/html-bars-brand.wrime")}
-    ${include("shared/html-bars-account.wrime")}
+    ${include("shared/html-bars-brand.html")}
+    ${include("shared/html-bars-account.html")}
 </div>
 <div id="mainColumn">
     <div id="navPane">
