--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/index.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/index.html
@@ -11,7 +11,7 @@ ${include("shared/html-head.html")}
 </div>
 <div id="mainColumn">
     <div id="navPane">
-        ${include("shared/html-bars-menu.wrime")}
+        ${include("shared/html-bars-menu.html")}
     </div>
 </div>
 </body>
