--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-head.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-head.html
@@ -21,7 +21,7 @@ ${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s
     <script type="text/javascript" src="${scriptsRoot}/events/Account.js"></script>
     <script type="text/javascript" src="${scriptsRoot}/events/ReCaptcha.js"></script>
     <script type="text/javascript" src="${scriptsRoot}/events/UserProfile.js"></script>
-    <script type="text/javascript" src="${scriptsRoot}/events/Game.Modals.js"></script>
+    <script type="text/javascript" src="${scriptsRoot}/events/World.Modals.js"></script>
     <script type="text/javascript" src="${scriptsRoot}/events/Map.Forms.js"></script>
 
     <link rel="stylesheet/less" href="${cp}/static/landscape/less/layout.less"/>
