--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-bars-menu.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-bars-menu.html
@@ -1,9 +1,11 @@
+<!--
 <section id="navBar">
     <div class="btn-toolbar">
         <div class="btn-group">
-            <button class="btn btn-success">Игры</button>
+            <button class="btn btn-success">Миры</button>
             <button class="btn btn-success">Аватары</button>
             <button class="btn btn-success">Треки</button>
         </div>
     </div>
 </section>
+-->
