--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-bars-account.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-bars-account.html
@@ -21,17 +21,6 @@ ${set m=eVisitor}
                 <i class="glyphicon-resize-small glyphicon-white collapse"></i>
                 <i class="glyphicon-resize-full glyphicon-white expand"></i>
             </a>
-            <ul class="notification-icons unstyled">
-                <li>
-                    <span class="value">15</span>
-                    <span class="label">друзей</span>
-                </li>
-                <li>
-                    <span class="value">0</span>
-                    <span class="label">писем</span>
-                </li>
-            </ul>
-            <div class="clear"></div>
         </div>
         <ul class="unstyled menu-column">
             <li>
@@ -52,7 +41,7 @@ ${set m=eVisitor}
         <div class="clear"></div>
     </div>
     <script type="text/javascript">
-        $('#accountBar .account-menu .opener .toggler').click(function () {
+        $('#accountBar .account-menu > .opener .toggler').click(function () {
             $('#accountBar .account-menu').toggleClass('expanded');
             return false;
         });
