added right pane in map edit

--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-head.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-head.html
@@ -15,6 +15,7 @@ ${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s
     <script type="text/javascript" src="${libRoot}/backbone/backbone-0.5.3.min.js"></script>
     <script type="text/javascript" src="${libRoot}/bootstrap/bootstrap-tooltip.js"></script>
     <script type="text/javascript" src="${libRoot}/bootstrap/bootstrap-popover.js"></script>
+    <script type="text/javascript" src="${libRoot}/bootstrap/bootstrap-tab.js"></script>
     <script type="text/javascript" src="${scriptsRoot}/visitor.js"></script>
     <script type="text/javascript" src="${scriptsRoot}/ui.js"></script>
     <script type="text/javascript" src="${scriptsRoot}/bus.js"></script>
