--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+${param gazap.site.web.extensions.CdnExtension eCdn transient}
+${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s:concat(themeRoot,'/lib'), scriptsRoot=s:concat(themeRoot,'/scripts')}
 <html class="edit-geometry">
-${include("../shared/html-head.html")}
+${include("../shared/html-head.html", withKinetic=true)}
 <body class="brand-with-menu">
+<div id="geometryCanvasOuter"></div>
+<script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Edit.js"></script>
 <div id="leftPane">
     ${include("../shared/html-bars-brand.html")}
     ${include("../shared/html-bars-account.html")}
@@ -31,9 +35,6 @@ ${include("../shared/html-head.html")}
             $('#godSurfaceTools > ul a:first').tab('show');
         })</script>
     </section>
-</div>
-<div id="mainColumn" class="profile-page">
-
 </div>
 </body>
 </html>
