--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-head.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-head.html
@@ -1,3 +1,4 @@
+${param Boolean withKinetic}
 ${param gazap.site.web.extensions.ViewMetaExtension eViewMeta transient}
 ${param gazap.site.web.extensions.CdnExtension eCdn transient}
 ${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s:concat(themeRoot,'/lib'), scriptsRoot=s:concat(themeRoot,'/scripts')}
@@ -24,6 +25,10 @@ ${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s
     <script type="text/javascript" src="${scriptsRoot}/events/UserProfile.js"></script>
     <script type="text/javascript" src="${scriptsRoot}/events/World.Modals.js"></script>
     <script type="text/javascript" src="${scriptsRoot}/events/Map.Forms.js"></script>
+
+    ${if(withKinetic eq true)}
+    <script type="text/javascript" src="${libRoot}/kinetic/kinetic-v3.9.6.min.js"></script>
+    ${if}
 
     <link rel="stylesheet/less" href="${cp}/static/landscape/less/layout.less"/>
     <script type="text/javascript" src="${libRoot}/less/less-1.3.0.min.js"></script>
