--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-head.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-head.html
@@ -27,7 +27,7 @@ ${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s
     <script type="text/javascript" src="${scriptsRoot}/events/Map.Forms.js"></script>
 
     ${if(withKinetic eq true)}
-    <script type="text/javascript" src="${libRoot}/kinetic/kinetic-v3.9.6.min.js"></script>
+    <script type="text/javascript" src="${libRoot}/kinetic/kinetic-v3.9.6.js"></script>
     ${if}
 
     <link rel="stylesheet/less" href="${cp}/static/landscape/less/layout.less"/>
