--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
@@ -5,6 +5,7 @@ ${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s
 ${include("../shared/html-head.html", withKinetic=true)}
 <body class="brand-with-menu">
 <div id="geometryCanvasOuter"></div>
+<script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Edit.KineticFacade.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Edit.js"></script>
 <div id="leftPane">
     ${include("../shared/html-bars-brand.html")}
