--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
@@ -6,7 +6,7 @@ ${include("../shared/html-head.html", withKinetic=true)}
 <body class="brand-with-menu">
 <div id="geometryCanvasOuter"></div>
 <script type="text/javascript" src="${scriptsRoot}/api/gazap.js"></script>
-<script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.jquery.js"></script>
+<script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.map.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Edit.js"></script>
 <div id="leftPane">
