--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
@@ -5,9 +5,9 @@ ${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s
 ${include("../shared/html-head.html")}
 <body class="brand-with-menu">
 <div id="geometryCanvasOuter"></div>
-<script type="text/javascript" src="${scriptsRoot}/api/gazap.js" ></script>
-<script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.js" ></script>
-<script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.map.js" ></script>
+<script type="text/javascript" src="${scriptsRoot}/api/gazap.js"></script>
+<script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.js"></script>
+<script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.map.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Edit.js"></script>
 <div id="leftPane">
     ${include("../shared/html-bars-brand.html")}
@@ -28,8 +28,19 @@ ${include("../shared/html-head.html")}
 
                     </div>
                 </div>
-                <div class="tab-pane-section">
-                    <h3>Файлы</h3>
+                <div id="god-tool-surface-tile-current" class="tab-pane-section hidden">
+                    <h3>Выбранный тайл</h3>
+                    <span class="tile-hash"></span>
+                    <img class="tile-thumb" src="/static/img/tan-200-${l18n:locale.language}.png"/>
+
+                    <div class="btn-toolbar">
+                        <div class="btn-group ">
+                            <button id="god-tool-surface-tile-current-clear" class="btn btn-danger">Удалить</button>
+                        </div>
+                        <div class="btn-group ">
+                            <button id="god-tool-surface-tile-current-load" class="btn btn-success">Загрузить</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="tab-pane" id="god-tool-metadata">Tool Metadata</div>
