--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+${param gazap.site.web.views.map.MapEditPlainPage content}
 ${param gazap.site.web.extensions.CdnExtension eCdn transient}
 ${set cp=eCdn.contextPath, themeRoot=s:concat(cp,'/static/landscape'), libRoot=s:concat(themeRoot,'/lib'), scriptsRoot=s:concat(themeRoot,'/scripts')}
 <html class="edit-geometry">
@@ -9,6 +10,12 @@ ${include("../shared/html-head.html")}
 <script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.map.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Edit.js"></script>
+<script type="text/javascript">
+    BUS.map.plain.editor.ready(function (controller) {
+        controller.contribution = '${content.contribution}';
+    });
+</script>
+
 <div id="leftPane">
     ${include("../shared/html-bars-brand.html")}
     ${include("../shared/html-bars-account.html")}
@@ -67,13 +74,17 @@ ${include("../shared/html-head.html")}
 
                         <div class="btn-toolbar">
                             <div class="btn-group ">
-                                <button id="god-tool-surface-tile-current-clear" class="btn btn-danger">Удалить</button>
+                                <button id="god-tool-surface-tile-current-clear" class="btn btn-danger hidden">
+                                    <span>Удалить</span>
+                                </button>
                             </div>
                             <div class="btn-group ">
-                                <button id="god-tool-surface-tile-current-load" class="btn btn-success">Загрузить
+                                <button id="god-tool-surface-tile-current-load" class="btn btn-success">
+                                    <span>Загрузить</span>
                                 </button>
                             </div>
                         </div>
+                        <div class="tile-upload-forms"></div>
                     </div>
                 </div>
             </div>
