reject contribution for tile

--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
@@ -19,7 +19,10 @@ ${include("../shared/html-head.html")}
             'change-tile-load-image-success':'загружена картинка',
             'change-tile-load-image-failure':'загрузить картинку не удалось из-за какой-то ошибки',
             'change-tile-add-strong':'Заменить картинку',
-            'change-tile-add':'в тайле T:{0}:{1}:{2}:{3}'
+            'change-tile-add':'в тайле T:{0}:{1}:{2}:{3}',
+            'change-reject':'удалить',
+            'change-reject-confirm':'Это действие удалит запрос. Продолжить?',
+            'change-highlight':'показать'
         };
         controller.start();
     });
