--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/edit-plain-geometry.html
@@ -12,6 +12,7 @@ ${include("../shared/html-head.html")}
 <script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Edit.js"></script>
 <script type="text/javascript">
     BUS.map.plain.editor.ready(function (controller) {
+        controller.tileSize = ${content.geometry.tileSize};
         controller.actionMap = '${content.map.id}';
         controller.actionBase = '${content.map.route}/god';
         controller.messages = {
