--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/user/_map-title.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/user/_map-title.html
@@ -9,6 +9,11 @@ ${set sc=eCdn.contextPath}
 
     <div class="actions">
         <ul class="unstyled pull-right">
+            ${if(map.approveCount gt 0)}
+            <li>
+                <a href="${sc}${map.route}/god-approve" class="btn-mini">аппрувить (${map.approveCount})</a>
+            </li>
+            ${if}
             ${if(can:editMap(map.id))}
             <li>
                 <a href="${sc}${map.route}/god" class="btn-mini">редактирование</a>
