Got Edit Controller is alive again

--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/plain-geometry-approve.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/plain-geometry-approve.html
@@ -9,6 +9,7 @@ ${include("../shared/html-head.html")}
 <script type="text/javascript" src="${scriptsRoot}/api/gazap.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/api/gazap.ui.map.js"></script>
+<script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.js"></script>
 <script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Approve.js"></script>
 <script type="text/javascript">
     BUS.map.plain.editor.ready(function (controller) {
