--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/plain-geometry-edit.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/plain-geometry-edit.html
@@ -13,9 +13,10 @@ ${include("../shared/html-head.html")}
 <script type="text/javascript" src="${scriptsRoot}/pages/PlainGeometry.Edit.js"></script>
 <script type="text/javascript">
     BUS.map.plain.editor.ready(function (controller) {
+        controller.tileServer = '${eCdn.server}';
         controller.tileSize = ${content.geometry.tileSize};
         controller.actionMap = '${content.map.id}';
-        controller.actionBase = '${content.map.route}/god';
+        controller.actionBase = '${eCdn.server}${content.map.route}/god';
         controller.messages = {
             'change-tile-load-image':'загрузка картинки начата...',
             'change-tile-load-image-success':'загружена картинка',
