--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/map/plain-geometry-edit.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/map/plain-geometry-edit.html
@@ -39,7 +39,6 @@ ${include("../shared/html-head.html")}
     <section id="godSurfaceTools" class="tabbed-pane">
         <ul class="unstyled container">
             <li><a href="#god-tool-surface" data-toggle="tab">Поверхность</a></li>
-            <li><a href="#god-tool-metadata" data-toggle="tab">Метадата</a></li>
             <li><a href="#god-tool-contribution-list" data-toggle="tab">Изменения</a></li>
         </ul>
         <div class="container">
@@ -89,9 +88,7 @@ ${include("../shared/html-head.html")}
                         <div class="tile-thumb-outer">
                             <div class="tile-thumb">
                                 <img/>
-                            <span>
-                                Тайл не задан
-                            </span>
+                                <span>Тайл не задан</span>
                             </div>
                         </div>
 
@@ -112,9 +109,8 @@ ${include("../shared/html-head.html")}
                     </div>
                 </div>
             </div>
-            <div class="tab-pane" id="god-tool-metadata">Tool Metadata</div>
             <div class="tab-pane" id="god-tool-contribution-list">
-                <ul class="unstyled contribution-list">
+                <ul class="unstyled contribution-list hide-author">
                 </ul>
             </div>
         </div>
